monitor/kubernetes-dashboard/kubernetes-dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard-ingressroute
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`dashboard.ltc.tsphotoclicks.net`)
      services:
        - name: kubernetes-dashboard-kong-proxy
          port: 443
          scheme: https
          serversTransport: kubernetes-dashboard-transport
  tls:
    secretName: kubernetes-dashboard-internal-secret
